--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,14 +2,20 @@ body {
   font-family: helvetica;
   font-size: 22px;
   color: seashell;
+  text-align: center;
   background-color: black;
   opacity: 0.9;
   margin: 0;
 }
 
+h2, h3, h4 {
+  margin: 10px 0;
+}
+
 .header {
   height: 69px;
   width: 100%;
+  background-color: black;
   border-bottom: 1px solid seashell;
   display: flex;
   justify-content: space-between;
@@ -26,5 +32,75 @@ body {
 
 .menu-item a {
   color: seashell;
+  padding: 10px;
+}
+
+.page-content {
+  padding-top: 70px;
+}
+
+.page-header {
+  display: flex;
+  align-items: center;
+  background-image: url("../images/img-mission-background.jpg");
+  width: 1200px;
+  height: 700px;
+  margin: 0 auto;
+}
+
+.header-block {
+  background-color: black;
+  width: 1200px;
+}
+
+.page-body {
+  padding-top: 50px;
+}
+
+.products {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 1000px;
+  margin: auto;
+}
+
+.product-block {
+  padding: 10px;
+}
+
+.product-block img {
+  width: 300px;
+  height: 200px;
+}
+
+.locations {
+  background-image: url("../images/img-locations-background.jpg");
+  width: 1200px;
+  height: 500px;
+  margin: 60px auto 0 auto;
+}
+
+.locations h2 {
+  margin: 0px auto 15px auto;
+  padding-top: 70px;
+}
+
+.location-blocks {
+  display: flex;
+  justify-content: center;
+}
+
+.single-location {
+  background-color: black;
+  opacity: 1;
+  width: 300px;
+  margin-left: 20px;
+  margin-right: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.single-location p {
   padding: 10px;
 }
